<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/imgView"
            android:layout_width="100dp"
            android:layout_marginRight="10dp"
            android:layout_height="100dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" />
        <TextView
            android:id="@+id/txt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/imgView"
            android:textSize="24sp"
            android:text="@string/numeactor"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/txt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt1"
            android:textSize="24sp"
            android:text="@string/numefilm"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt2"
            android:layout_toRightOf="@id/imgView"
            android:textSize="24sp"
            android:text="@string/gen"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:textStyle="bold"
            />
        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgView"
            android:numStars="5"
            android:rating="0.5"
            />
    </RelativeLayout>
</ScrollView>